[package]
name = "lunavore-rs"
version = "0.1.0"
authors = ["Hans W. Uhlig <hans.uhlig@ibm.com>"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst" }
gfx = { version = "0.17", features = ["serialize"] }
derivative = "1.0"
genmesh = "0.4"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"